@@ -7,7 +7,9 @@ Fixed in 4.3.1 version:
    * Misc compilation problems: line exceeding 132 characters, 
      syntax not accepted by recent versions of gfortran, etc.
    * PW: nasty out-of-bound bug leading to mysterious crashes or 
-     incorrect results in some variable-cell calculations
+     incorrect results in some variable-cell calculations. Also in
+     variable-cell: last scf step could crash due to insufficient
+     FFT grid if the final cell was larger than the initial one
    * NEB + nonlocal exchange (DF-vdW) wasn't working
    * HSE numerical problems in function expint
    * XSPECTRA wasn't working any longer due to missing updates to
